# entregasdalu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  Makefile  design.md  docker-compose.yml  frontend.md  spec.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/config/: settings.py  test_settings.py  urls.py
backend/diary/: adapters.py  api.py  constants.py  hashing.py  images.py  models.py  offer.py  photos.py  reveal.py  schemas.py  services.py  timeutils.py
backend/diary/migrations/: 0001_initial.py
backend/diary/tests/: conftest.py  test_api.py  test_hashing.py  test_nfc.py  test_offer.py  test_reveal.py  test_services.py
caddy/: Caddyfile  Dockerfile
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  generated.ts  hooks.ts
frontend/src/components/: Chip.tsx  CtaButton.tsx  EntryChips.tsx  Eyebrow.tsx  NavBar.tsx  ProgressBar.tsx  TierCard.tsx
frontend/src/components/Mosaic/: Mosaic.tsx  index.ts
frontend/src/lib/: format.ts
frontend/src/screens/: Editor.tsx  Gallery.tsx  JaEntregue.tsx  Menu.tsx  Reveal.tsx  SignIn.tsx  Stats.tsx
prototype/: Entregasdalu.dc.html  Mosaic.dc.html  README.md  support.js
